Actualización de metodos y parametros

--- a/api_project.json
+++ b/api_project.json
@@ -1,15 +1,15 @@
 {
-  "name": "APITEST",
+  "name": "Documentación con API-DOC",
   "version": "0.1.0",
-  "description": "apiDoc basic example",
+  "description": "Final de prácticas profesionales supervisadas",
   "title": "Custom apiDoc browser title",
-  "url": "http://api.test.com/v1",
+  "url": "",
   "sampleUrl": false,
   "defaultVersion": "0.0.0",
   "apidoc": "0.3.0",
   "generator": {
     "name": "apidoc",
-    "time": "2017-12-07T00:16:19.100Z",
+    "time": "2017-12-10T02:14:43.135Z",
     "url": "http://apidocjs.com",
     "version": "0.17.6"
   }
